mType/tests/testFiles/class/error/value_abstract_conflict.mt
// Test: Value class cannot be abstract
// Expected error: Class cannot be both value and abstract

value abstract class InvalidValueClass {
    abstract function doSomething(): void;
}
